@@ -59,7 +59,6 @@ func FileOutputSpec(c gs.Context) {
 		msg := pipeline_ts.GetTestMessage()
 		pack := NewPipelinePack(pConfig.InputRecycleChan())
 		pack.Message = msg
-		pack.Decoded = true
 
 		errChan := make(chan error, 1)
 
